methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:2: error: type mismatch;
 found   : Unit
 required: Boolean
    for (stepper <-1 to 6){
                 ^