methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
    for (stepper <-1 to 6){
      forward()
    }
}